--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
 
     <meta name="author" content="{{ site.name }}" />
     <meta name="description" content="{{ site.description }}">
+    <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
